[package]
name = "tsesh"
version = "0.1.2"
authors = ["Tommy Joe Lund <tomlun92@gmail.com>"]
description = """
A command-line tool for managing sessions in tmux
"""
categories = ["command-line-utilities"]
homepage = "https://github.com/tommyjl/tmux-sessions"
repository = "https://github.com/tommyjl/tmux-sessions"
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0.41"
clap = "3.0.0-beta.2"
serde= { version = "1.0", features = ["derive"] }
shellexpand = "2.1.0"
toml = "0.5.8"
